Fix firefox scrollbar problems.

--- a/web-client/public/stylesheets/grnsight.styl
+++ b/web-client/public/stylesheets/grnsight.styl
@@ -9,11 +9,19 @@ body
 .file-input-name
   font-weight: normal
 
-.grnTest
+.grnParent
   left: 250px
   top: 53px
   right: 5px
   bottom: 5px
+  position: absolute
+  overflow: auto
+
+.grnTest
+  // left: 250px
+  // top: 53px
+  // right: 5px
+  // bottom: 5px
   position: absolute
   overflow: auto
 
